--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,13 @@
             <artifactId>spark-core</artifactId>
             <version>2.9.4</version>
         </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.5.20</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 </project>
